--- a/testPrime.html
+++ b/testPrime.html
@@ -1,32 +1,41 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Prime Number</title>
-</head>
-
-<body>
-	<script>
-    	function isPrime(num){
-			var n = Math.sqrt(num);
-			for(i=2;i<=n; i++){
-				if(num%i==0)
-				return false;
-				}
-				return true;
-				}
-			
-			var number = prompt("Enter for test", "0");			
-			
-			if(number != 1 && number !=0){
-				if(isPrime(number)){
-					document.write(number+" "+"Is Prime");
-					}else{
-						document.write(number+" "+"Is not Prime");
-						}
+    <head>
+        <meta charset="utf-8">
+        <title>Untitled Document</title>
+        <script>
+        	function isPrime(n){
+				if (n < 2) {  
+				 return 0;  
+			   }  
+			   if(n == 2) {   
+				 return 1;   
+			   }    
+			   if(n % 2 == 0) {   
+				 return 0;   
+			   }   
+			   for(i = 3; i <= n / 2; i = i + 2) {   
+				 if(n % i == 0) {   
+				   return 0;   
+				 }   
+			   }   
+			   return 1;
+			}
+			function checkPrime(){
+				var n = document.getElementById("inputnum").value;
+				if(isPrime(n) == 1){
+					document.getElementById("demo").innerHTML = +n+" is prime"
 				}else{
-					document.write(number+" "+"Is not Prime");
-					}
-    </script>
-</body>
+					document.getElementById("demo").innerHTML = +n+" is not prime"
+				}	
+			}
+        </script>
+    </head>
+    
+    <body>
+    	<input type="text" id="inputnum" placeholder="Inter number"><br>
+        <input type="button" value="Check Prime" onClick="checkPrime()">
+        
+        <h2 id="demo"></h2>
+    </body>
 </html>
