--- a/testPrime.html
+++ b/testPrime.html
@@ -14,7 +14,7 @@
 			   if(n % 2 == 0) {   
 				 return 0;   
 			   }   
-			   for(i = 3; i <= n / 2; i = i + 2) {   
+			   for(i = 3; i <= Math.sqrt(n); i = i + 2) {   
 				 if(n % i == 0) {   
 				   return 0;   
 				 }   
